bad/assign_self_class.example_compiler_output
ERROR
[1mbad/assign_self_class.lat:7:7: [1;31merror: [0;1mleft side is not assignable[m
	self = new Y;
	     [1;32m^[m
[1mbad/assign_self_class.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	self = new Y;
	[1;32m^[m
